alignment and color fix
alignment and color fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,133 @@
-.main_page{
-	font-family:verdana;
-	background: linear-gradient(to bottom, rgba(255,204,153,0.6), rgba(26,26,26,0.7));
-	//background-color:rgba(191, 191, 191,0.3);
-/*
-	background: url(img3.jpg);
-	background-position: center top;
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
-*/
-	}  
+	.main_page{
+		font-family:verdana;
+		background: linear-gradient(to bottom, rgba(186,151,115,0.6), rgba(26,26,26,0.7));
+		//background-color:rgba(191, 191, 191,0.3);
+		/*
+		background: url(img3.jpg);
+		background-position: center top;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		*/
+	}
 	.top_header{
-	 position: fixed;
-     width: 100%;
-	 z-index:1;
-     text-align: left;
+		position: fixed;
+		width: 100%;
+		z-index:1;
+		text-align: left;
 	}
 	.top_menu_back{
-	 position: fixed;
-     width: 100%;
-	 z-index:1;
-	 left:0;
-/*     background-color: rgba(255, 255,255,0.6);*/
-         background-color: rgba(32,32,32,0.75);
-     padding-bottom: 0;
-     padding-top: 0;
-     margin-top: 7px;
+		position: fixed;
+		width: 100%;
+		z-index:1;
+		left:0;
+		/*     background-color: rgba(255, 255,255,0.6);*/
+		background-color: rgba(32,32,32,0.75);
+		padding-bottom: 0;
+		padding-top: 0;
+		margin-top: 7px;
 	}
-    .top_menu{
-    margin-top: 10px;
-    margin-bottom: 10px;
-/*    background-color: rgba(0,0,0,0.88);*/
-        background-color: transparent;
-        border:none;
-    }
-.mobile_button_nav{
-    border:none;
-}
-  header,footer,section{padding:8px;}
-  header,footer{
-      color:white;
-      background-color:rgb(0, 0, 0);
-      }
-  header
-  {
-      text-align:center; 
-  }
-  footer{
-    border-collapse:collapse;
-    border:none;
-    width:100%;
-    }
+	.top_menu{
+		margin-top: 0;
+		margin-bottom: 0;
+		/*    background-color: rgba(0,0,0,0.88);*/
+		background-color: transparent;
+		border:none;
+	}
+	.mobile_button_nav{
+		border:none;
+	}
+	header,footer,section{
+		padding:8px;
+	}
+	header,footer{
+		color:white;
+		background-color:rgb(0, 0, 0);
+	}
+	header
+	{
+		text-align:center;
+	}
+	footer{
+		border-collapse:collapse;
+		border:none;
+		width:100%;
+	}
 	table{
-	width:100%;}
+		width:100%;
+	}
 	tr,th
 	{
-   font-size:small;
-   text-align:center;
-   padding:20px;  
+		font-size:small;
+		text-align:center;
+		padding:20px;
 	}
-    .inner{
-        margin:0 15px;
-    }
+	.inner{
+	  margin:0 15px;
+	}
 	.inner .info{
-	background:rgba(255,255,255,0.80);
-    border-radius: 14px;
-    padding: 30px 5px;
-/*	box-shadow: 0 1px 5px rgba(0,0,0,.3);*/
-       box-shadow: 5px 14px 25px rgba(0,0,0,.3);
-	left:0;
-        text-align: justify;
+		background:rgba(255,255,255,0.80);
+		border-radius: 14px;
+		padding: 30px 5px;
+		/*	box-shadow: 0 1px 5px rgba(0,0,0,.3);*/
+		box-shadow: 5px 14px 25px rgba(0,0,0,.3);
+		left:0;
+		text-align: justify;
 	}
 	.inner .link_web{
-	//background-color: rgb(0,115,153);
-	background-color:rgb(255, 117, 26);
+	  //background-color: rgb(0,115,153);
+	  background-color:rgb(255, 153, 51);
     border-radius: 19px;
     color: #fff;
     padding: 5px 20px;
     font-weight: bold;
-	    border-width: 0;
+	  border-width: 0;
     border-style: none;
 	}
-.info_right{
-        padding-left: 15px;
-    padding-right: 20px;
-}
-      .heading{
-          margin:0;
-          margin-right: 9%;
-      }
-    .nav_links li{
-    border:none;
-    border-radius: 30px;
-    padding: 5px 10px;
-    margin: 8px 10px;
-    width: 110px;
-    text-align: center;
-/*    background-color: rgb(255, 133, 51);*/
-	font-weight:bold;
+	.inner .link_web:hover{
+		border:none;
 	}
-	 .nav_links li a{
-    color:#fff !important;
-    padding: 0;
-    margin: 0;
-         text-align: left;
+	.info_right{
+	  padding-left: 15px;
+	  padding-right: 20px;
+	}
+	.heading{
+	  margin:0;
+	  margin-right: 9%;
+	}
+  .nav_links li{
+	  border:none;
+	  border-radius: 30px;
+	  padding: 5px 10px;
+	  margin: 8px 10px;
+	  width: 110px;
+	  text-align: center;
+	/*    background-color: rgb(255, 133, 51);*/
+		font-weight:bold;
+	}
+	.nav_links li a{
+		color:#fff !important;
+		padding: 0;
+		margin: 0;
+		text-align: left;
+	}
+	.nav_links li a:hover{
+		/*color:rgb(255, 179, 128) !important;*/
+		color:rgb(255, 153, 51) !important;
+		font-weight: bold;
+		background-color: transparent;
 	}
 	.nav_links .active{
 /*	background-color: rgb(255, 204, 179);*/
 	}
 	.nav_links .active > a{
-	color: rgb(255, 179, 128) !important;
-	background-color: transparent !important;
-    }
-    .nav_links .open > a, .nav_links .open > a:focus, .nav_links .open > a:hover{
-    background-color: transparent !important;
-    }
-    .menu_drop{
-    top: 171%;
-    left: -8%;
-    background-color: rgba(32,32,32,0.9);
-    }
+		color: rgb(255, 153, 51) !important;
+		background-color: transparent !important;
+	}
+	.nav_links .open > a, .nav_links .open > a:focus, .nav_links .open > a:hover{
+		background-color: transparent !important;
+	}
+  .menu_drop{
+	  top: 171%;
+	  left: -8%;
+	  background-color: rgba(32,32,32,0.9);
+  }
